--- a/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiAnuncioView.fxml
+++ b/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiAnuncioView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="556.0" prefWidth="885.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.MiAnuncioViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="577.0" prefWidth="961.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.MiAnuncioViewController">
    <children>
       <TabPane layoutX="8.0" prefHeight="556.0" prefWidth="855.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
@@ -21,7 +21,7 @@
                         <Label layoutX="38.0" layoutY="196.0" text="Fecha de publicación" />
                         <Label layoutX="38.0" layoutY="234.0" text="Fecha Final" />
                         <Label layoutX="43.0" layoutY="271.0" text="Producto" />
-                        <Pane layoutY="-3.0" prefHeight="76.0" prefWidth="885.0" style="-fx-background-color: #0697AE;">
+                        <Pane layoutY="-3.0" prefHeight="76.0" prefWidth="961.0" style="-fx-background-color: #0697AE;">
                            <children>
                               <Label layoutX="307.0" layoutY="24.0" text="Información del anuncio" textFill="WHITE">
                                  <font>
@@ -60,12 +60,12 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="btnEliminar" layoutX="428.0" layoutY="474.0" mnemonicParsing="false" onAction="#eliminarAnuncio" onKeyPressed="#eliminarAnuncioTecla" prefHeight="19.0" prefWidth="93.0" style="-fx-background-color: red; -fx-cursor: hand;" text="Eliminar" textFill="WHITE">
+                        <Button fx:id="btnEliminar" layoutX="236.0" layoutY="479.0" mnemonicParsing="false" onAction="#eliminarAnuncio" onKeyPressed="#eliminarAnuncioTecla" prefHeight="19.0" prefWidth="93.0" style="-fx-background-color: red; -fx-cursor: hand;" text="Eliminar" textFill="WHITE">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Button>
-                        <Pane prefHeight="76.0" prefWidth="885.0" style="-fx-background-color: #0697AE;">
+                        <Pane prefHeight="76.0" prefWidth="961.0" style="-fx-background-color: #0697AE;">
                            <children>
                               <Label layoutX="380.0" layoutY="24.0" text="Mis productos" textFill="WHITE">
                                  <font>
@@ -74,16 +74,30 @@
                               </Label>
                            </children>
                         </Pane>
-                        <TableView fx:id="tableViewAnuncios" layoutY="76.0" prefHeight="391.0" prefWidth="885.0">
+                        <TableView fx:id="tableViewAnuncios" layoutX="1.0" layoutY="87.0" prefHeight="375.0" prefWidth="564.0">
                            <columns>
                               <TableColumn fx:id="columNombreUsuario" prefWidth="120.0" text="Nombre usuario" />
-                              <TableColumn fx:id="columCodigoAnuncio" prefWidth="105.0" text="Código" />
-                              <TableColumn fx:id="columFechaInicio" prefWidth="141.0" text="Fecha de publicacion" />
-                              <TableColumn fx:id="columFechaFinal" prefWidth="105.0" text="Fecha limite" />
-                              <TableColumn fx:id="columProducto" prefWidth="131.0" text="Producto" />
-                              <TableColumn fx:id="columPujas" prefWidth="282.0" text="Pujas" />
+                              <TableColumn fx:id="columCodigoAnuncio" prefWidth="86.0" text="Código" />
+                              <TableColumn fx:id="columFechaInicio" prefWidth="131.0" text="Fecha de publicacion" />
+                              <TableColumn fx:id="columFechaFinal" text="Fecha limite" />
+                              <TableColumn fx:id="columProducto" prefWidth="146.0" text="Producto" />
                            </columns>
                         </TableView>
+                        <Label layoutX="711.0" layoutY="88.0" text="Pujas por el anuncio">
+                           <font>
+                              <Font name="Bookman Old Style" size="17.0" />
+                           </font>
+                        </Label>
+                        <TableView fx:id="tableViewPujas" layoutX="587.0" layoutY="127.0" prefHeight="269.0" prefWidth="368.0">
+                          <columns>
+                            <TableColumn fx:id="columCodigoPuja" prefWidth="99.0" text="Código" />
+                            <TableColumn fx:id="columComprador" prefWidth="77.0" text="Comprador" />
+                              <TableColumn fx:id="columFechapuja" prefWidth="76.0" text="Fecha" />
+                              <TableColumn fx:id="columValor" prefWidth="115.0" text="Valor" />
+                          </columns>
+                        </TableView>
+                        <Separator layoutX="571.0" layoutY="76.0" orientation="VERTICAL" prefHeight="466.0" prefWidth="12.0" />
+                        <Button fx:id="btnAceptar" layoutX="734.0" layoutY="477.0" mnemonicParsing="false" onAction="#aceptarPuja" onKeyPressed="#aceptarPujaTecla" prefHeight="32.0" prefWidth="98.0" style="-fx-background-color: #0697AE;" text="Aceptar Puja" textFill="WHITE" />
                      </children>
                   </AnchorPane>
             </content>
