--- a/src/main/resources/co/edu/uniquindio/pr3/subastas/application/InicioSesionView.fxml
+++ b/src/main/resources/co/edu/uniquindio/pr3/subastas/application/InicioSesionView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.effect.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.image.*?>
@@ -9,47 +10,47 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="556.0" prefWidth="885.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.InicioSesionViewController">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.InicioSesionViewController">
    <children>
-      <Pane prefHeight="62.0" prefWidth="885.0" style="-fx-background-color: #0697AE;">
+      <Pane prefHeight="62.0" prefWidth="885.0" style="-fx-background-color: #0697AE;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label layoutX="364.0" layoutY="-6.0" text="Inicio de sesión" textFill="WHITE">
+            <Label layoutX="367.0" prefHeight="50.0" prefWidth="187.0" text="Inicio de sesión" textFill="WHITE">
                <font>
                   <Font name="Javanese Text" size="27.0" />
                </font>
             </Label>
          </children></Pane>
-      <ImageView fitHeight="492.0" fitWidth="488.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="476.0" fitWidth="489.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="396.0" AnchorPane.topAnchor="62.0">
          <image>
             <Image url="@../images/Martillo.jpeg" />
          </image>
       </ImageView>
-      <Label layoutX="508.0" layoutY="192.0" text="Nombre de usuario" />
-      <TextField fx:id="txtInicioNombre" alignment="CENTER" layoutX="635.0" layoutY="188.0" prefHeight="25.0" prefWidth="170.0" promptText="Ingrese su nombre de usuario" styleClass="text-field-custom" stylesheets="@../styles/TxtStyle2.css" />
-      <Label layoutX="508.0" layoutY="251.0" text="Contraseña" />
-      <PasswordField fx:id="txtInicioPassword" alignment="CENTER" layoutX="635.0" layoutY="247.0" prefHeight="25.0" prefWidth="170.0" promptText="Ingrese su Contraseña" styleClass="text-field-custom" stylesheets="@../styles/TxtStyle2.css" />
-      <Button fx:id="btnIniciar" layoutX="624.0" layoutY="366.0" mnemonicParsing="false" onAction="#iniciarSesion" onKeyPressed="#iniciarSesionTecla" prefHeight="33.0" prefWidth="103.0" style="-fx-background-color: #0697AE; -fx-cursor: hand;" text="Iniciar Sesión" textFill="WHITE">
+      <Label layoutX="508.0" layoutY="192.0" text="Nombre de usuario" AnchorPane.leftAnchor="508.0" AnchorPane.rightAnchor="274.0" />
+      <TextField fx:id="txtInicioNombre" alignment="CENTER" layoutX="635.0" layoutY="188.0" prefHeight="25.0" prefWidth="170.0" promptText="Ingrese su nombre de usuario" styleClass="text-field-custom" stylesheets="@../styles/TxtStyle2.css" AnchorPane.leftAnchor="635.0" AnchorPane.rightAnchor="80.0" />
+      <Label layoutX="508.0" layoutY="251.0" text="Contraseña" AnchorPane.leftAnchor="508.0" AnchorPane.rightAnchor="317.0" />
+      <PasswordField fx:id="txtInicioPassword" alignment="CENTER" layoutX="635.0" layoutY="247.0" prefHeight="25.0" prefWidth="170.0" promptText="Ingrese su Contraseña" styleClass="text-field-custom" stylesheets="@../styles/TxtStyle2.css" AnchorPane.leftAnchor="635.0" AnchorPane.rightAnchor="80.0" />
+      <Button fx:id="btnIniciar" layoutX="624.0" layoutY="366.0" mnemonicParsing="false" onAction="#iniciarSesion" onKeyPressed="#iniciarSesionTecla" prefHeight="33.0" prefWidth="103.0" style="-fx-background-color: #0697AE; -fx-cursor: hand;" text="Iniciar Sesión" textFill="WHITE" AnchorPane.leftAnchor="624.0" AnchorPane.rightAnchor="158.0">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Button fx:id="btnRecuperarCuenta" layoutX="714.0" layoutY="290.0" mnemonicParsing="false" onAction="#recuperarContrasenia" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Recuperar" textFill="#5900ff" />
-      <Label layoutX="513.0" layoutY="295.0" text="¿Olvido su contraseña? Ingrese aqui:" />
-      <Label layoutX="639.0" layoutY="76.0" text="Bienvenido ">
+      <Button fx:id="btnRecuperarCuenta" layoutX="692.0" layoutY="291.0" mnemonicParsing="false" onAction="#recuperarContrasenia" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Recuperar" textFill="#5900ff" AnchorPane.leftAnchor="692.0" AnchorPane.rightAnchor="123.0" />
+      <Label layoutX="484.0" layoutY="295.0" prefHeight="17.0" prefWidth="195.0" text="¿Olvido su contraseña? Ingrese aqui:" AnchorPane.leftAnchor="484.0" AnchorPane.rightAnchor="206.0" />
+      <Label layoutX="635.0" layoutY="79.0" prefHeight="25.0" prefWidth="103.0" text="Bienvenido " textAlignment="CENTER" AnchorPane.leftAnchor="635.0" AnchorPane.rightAnchor="147.0">
          <font>
             <Font name="Bookman Old Style" size="16.0" />
          </font></Label>
-      <Label layoutX="539.0" layoutY="110.0" text="Disfrute de la mejor casa de subastas">
+      <Label layoutX="551.0" layoutY="117.0" prefHeight="18.0" prefWidth="308.0" text="Disfrute de la mejor casa de subastas" textAlignment="CENTER" AnchorPane.leftAnchor="551.0" AnchorPane.rightAnchor="26.0">
          <font>
             <Font name="Bookman Old Style" size="15.0" />
          </font></Label>
-      <Label layoutX="672.0" layoutY="412.0" text="0" />
-      <Button fx:id="btnCrearCuenta" layoutX="625.0" layoutY="444.0" mnemonicParsing="false" onAction="#crearCuentaNueva" onKeyPressed="#crearCuentaNuevaTecla" prefHeight="33.0" prefWidth="103.0" style="-fx-background-color: #0697AE; -fx-cursor: hand;" text="Crear cuenta" textFill="WHITE">
+      <Label layoutX="672.0" layoutY="412.0" text="0" AnchorPane.leftAnchor="672.0" AnchorPane.rightAnchor="206.0" />
+      <Button fx:id="btnCrearCuenta" layoutX="625.0" layoutY="444.0" mnemonicParsing="false" onAction="#crearCuentaNueva" onKeyPressed="#crearCuentaNuevaTecla" prefHeight="33.0" prefWidth="103.0" style="-fx-background-color: #0697AE; -fx-cursor: hand;" text="Crear cuenta" textFill="WHITE" AnchorPane.leftAnchor="624.0" AnchorPane.rightAnchor="158.0">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Separator layoutX="488.0" layoutY="135.0" prefHeight="0.0" prefWidth="355.0" />
-      <Separator layoutX="502.0" layoutY="329.0" prefHeight="3.0" prefWidth="343.0" />
-      <Separator layoutX="501.0" layoutY="420.0" prefHeight="3.0" prefWidth="154.0" />
-      <Separator layoutX="689.0" layoutY="422.0" prefHeight="3.0" prefWidth="154.0" />
+      <Separator layoutX="488.0" layoutY="135.0" prefHeight="0.0" prefWidth="355.0" AnchorPane.leftAnchor="488.0" AnchorPane.rightAnchor="42.0" AnchorPane.topAnchor="135.0" />
+      <Separator layoutX="501.0" layoutY="349.0" prefHeight="3.0" prefWidth="339.0" AnchorPane.leftAnchor="501.0" AnchorPane.rightAnchor="45.0" />
+      <Separator layoutX="501.0" layoutY="420.0" prefHeight="3.0" prefWidth="154.0" AnchorPane.leftAnchor="501.0" AnchorPane.rightAnchor="230.0" />
+      <Separator layoutX="689.0" layoutY="419.0" prefHeight="3.0" prefWidth="154.0" AnchorPane.leftAnchor="689.0" AnchorPane.rightAnchor="42.0" />
    </children>
 </AnchorPane>
