--- a/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiAnuncioView.fxml
+++ b/src/main/resources/co/edu/uniquindio/pr3/subastas/application/MiAnuncioView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="577.0" prefWidth="961.0" stylesheets="@../styles/TxtStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.MiAnuncioViewController">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../styles/TxtStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.pr3.subastas.viewControllers.MiAnuncioViewController">
    <children>
       <TabPane fx:id="tabPaneAnuncios" layoutX="8.0" prefHeight="607.0" prefWidth="885.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
@@ -17,7 +18,7 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="text-field-custom">
                      <children>
-                        <AnchorPane layoutX="-1.0" layoutY="72.0" prefHeight="478.0" prefWidth="191.0" style="-fx-background-color: #AEB5B6;" />
+                        <AnchorPane layoutX="-1.0" layoutY="67.0" prefHeight="515.0" prefWidth="194.0" style="-fx-background-color: #AEB5B6;" AnchorPane.bottomAnchor="-4.0" AnchorPane.leftAnchor="-1.0" AnchorPane.topAnchor="67.0" />
                         <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#0697ae" height="42.0" layoutX="-18.0" layoutY="106.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="222.0" />
                         <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#0697ae" height="42.0" layoutX="-18.0" layoutY="160.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="222.0" />
                         <Rectangle arcHeight="30.0" arcWidth="30.0" fill="#0697ae" height="42.0" layoutX="-18.0" layoutY="214.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="222.0" />
@@ -36,44 +37,40 @@
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font></Label>
-                        <Pane layoutY="-3.0" prefHeight="76.0" prefWidth="961.0" style="-fx-background-color: #0697AE;">
+                        <Pane layoutY="-3.0" prefHeight="76.0" prefWidth="961.0" style="-fx-background-color: #0697AE;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-76.0" AnchorPane.topAnchor="-5.0">
                            <children>
-                              <Label layoutX="337.0" layoutY="24.0" text="Información del anuncio" textFill="WHITE">
+                              <Label layoutX="347.0" layoutY="24.0" text="Información del anuncio" textFill="WHITE">
                                  <font>
                                     <Font name="Bookman Old Style" size="24.0" />
                                  </font>
                               </Label>
                            </children>
                         </Pane>
-                        <TextField fx:id="txtNombreAnunciante" layoutX="264.0" layoutY="114.0" prefHeight="25.0" prefWidth="286.0" styleClass="text-field-custom" />
-                        <TextField fx:id="txtCodigoAnuncio" layoutX="264.0" layoutY="168.0" prefHeight="25.0" prefWidth="286.0" styleClass="text-field-custom" />
-                        <DatePicker fx:id="txtFechaInicio" layoutX="265.0" layoutY="223.0" prefHeight="25.0" prefWidth="285.0" style="-fx-border-color: #0697AE;" />
-                        <DatePicker fx:id="txtFechaFinal" layoutX="265.0" layoutY="276.0" prefHeight="25.0" prefWidth="285.0" style="-fx-border-color: #0697AE;" />
-                        <ImageView fx:id="ImageViewProductoSeleccionado" fitHeight="256.0" fitWidth="322.0" layoutX="590.0" layoutY="148.0" pickOnBounds="true" preserveRatio="true">
+                        <TextField fx:id="txtNombreAnunciante" layoutX="299.0" layoutY="116.0" prefHeight="27.0" prefWidth="301.0" styleClass="text-field-custom" AnchorPane.leftAnchor="299.0" AnchorPane.rightAnchor="285.0" />
+                        <TextField fx:id="txtCodigoAnuncio" layoutX="299.0" layoutY="170.0" prefHeight="27.0" prefWidth="305.0" styleClass="text-field-custom" AnchorPane.leftAnchor="299.0" AnchorPane.rightAnchor="281.0" />
+                        <DatePicker fx:id="txtFechaInicio" layoutX="300.0" layoutY="225.0" prefHeight="27.0" prefWidth="306.0" style="-fx-border-color: #0697AE;" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="279.0" />
+                        <DatePicker fx:id="txtFechaFinal" layoutX="300.0" layoutY="278.0" prefHeight="27.0" prefWidth="306.0" style="-fx-border-color: #0697AE;" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="279.0" />
+                        <ImageView fx:id="ImageViewProductoSeleccionado" fitHeight="205.0" fitWidth="263.0" layoutX="618.0" layoutY="190.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="190.63604736328125" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="187.36395263671875">
                            <image>
                               <Image url="@../images/ImageStock.png" />
                            </image>
                         </ImageView>
-                        <Button fx:id="btnNuevo" layoutX="266.0" layoutY="475.0" mnemonicParsing="false" onAction="#limpiarCampos" onKeyPressed="#limpiarCamposTecla" prefHeight="37.0" prefWidth="111.0" style="-fx-background-color: white; -fx-border-color: #0697AE; -fx-cursor: hand;" text="Nuevo" textFill="#0697ae">
+                        <Button fx:id="btnNuevo" layoutX="265.0" layoutY="515.0" mnemonicParsing="false" onAction="#limpiarCampos" onKeyPressed="#limpiarCamposTecla" prefHeight="37.0" prefWidth="111.0" style="-fx-background-color: white; -fx-border-color: #0697AE; -fx-cursor: hand;" text="Nuevo" textFill="#0697ae" AnchorPane.bottomAnchor="26.0" AnchorPane.leftAnchor="265.0">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Button>
-                        <Button fx:id="btnAnunciar" layoutX="428.0" layoutY="475.0" mnemonicParsing="false" onAction="#anunciarProducto" onKeyPressed="#anunciarProductoTecla" prefHeight="37.0" prefWidth="111.0" style="-fx-background-color: #0697AE; -fx-cursor: hand;" text="Anunciar" textFill="WHITE">
+                        <Button fx:id="btnAnunciar" layoutX="427.0" layoutY="515.0" mnemonicParsing="false" onAction="#anunciarProducto" onKeyPressed="#anunciarProductoTecla" prefHeight="37.0" prefWidth="111.0" style="-fx-background-color: #0697AE; -fx-cursor: hand;" text="Anunciar" textFill="WHITE" AnchorPane.bottomAnchor="26.0" AnchorPane.leftAnchor="427.0">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Button>
-                        <Button fx:id="btnActualizar" layoutX="592.0" layoutY="475.0" mnemonicParsing="false" onAction="#actualizarAnuncio" onKeyPressed="#actualizarAnuncioTecla" prefHeight="37.0" prefWidth="111.0" style="-fx-background-color: white; -fx-border-color: #0697AE; -fx-cursor: hand;" text="Actualizar" textFill="#0697ae">
+                        <Button fx:id="btnActualizar" layoutX="591.0" layoutY="515.0" mnemonicParsing="false" onAction="#actualizarAnuncio" onKeyPressed="#actualizarAnuncioTecla" prefHeight="37.0" prefWidth="111.0" style="-fx-background-color: white; -fx-border-color: #0697AE; -fx-cursor: hand;" text="Actualizar" textFill="#0697ae" AnchorPane.bottomAnchor="26.0" AnchorPane.leftAnchor="591.0">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Button>
-                        <TextArea fx:id="txtProducto" layoutX="265.0" layoutY="323.0" prefHeight="137.0" prefWidth="308.0" />
-                        <Label layoutX="691.0" layoutY="160.0" text="Imagen del producto">
-                           <font>
-                              <Font name="System Bold" size="12.0" />
-                           </font></Label>
+                        <TextArea fx:id="txtProducto" layoutX="300.0" layoutY="325.0" prefHeight="135.0" prefWidth="307.0" AnchorPane.bottomAnchor="120.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="278.0" AnchorPane.topAnchor="323.0" />
                         <Label layoutX="38.0" layoutY="119.0" style="-fx-background-size: 10px 30px 10px 30px;" text="Nombre del anunciante" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="12.0" />
@@ -83,6 +80,11 @@
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Label>
+                        <TextField alignment="CENTER" layoutX="673.0" layoutY="159.0" prefHeight="29.0" prefWidth="153.0" style="-fx-background-color: transparent;" text="Imagen del producto" AnchorPane.rightAnchor="59.0" AnchorPane.topAnchor="159.0">
+                           <font>
+                              <Font name="System Bold Italic" size="13.0" />
+                           </font>
+                        </TextField>
                      </children>
                   </AnchorPane>
             </content>
